--- a/requirements.txt
+++ b/requirements.txt
@@ -36,3 +36,8 @@ Werkzeug==2.0.3
 google-cloud-language==2.4.1
 google-cloud-bigquery==3.0.1
 google-cloud-storage==2.2.1
+plotly-express==0.4.1
+pandas==1.4.2
+matplotlib==3.5.1
+db-dtypes==1.0.0
+plotly==5.7.0
